FortranAnalyzer/src/Grammar/GrammarParser.java
// Generated from C:/Users/Erwin14k/Documents/olc2vj22_202001534/FortranAnalyzer\Grammar.g4 by ANTLR 4.10.1
package Grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, INT=59, DOUBLE=60, 
		IDEN=61, COMMENT=62, STRING=63, STRING2=64, WS=65;
	public static final int
		RULE_start = 0, RULE_listaInstrucciones = 1, RULE_instruction = 2, RULE_declaration = 3, 
		RULE_asignation = 4, RULE_print = 5, RULE_expr = 6, RULE_if_ = 7, RULE_statement = 8, 
		RULE_else_ = 9, RULE_doWhile = 10, RULE_whileStatement = 11, RULE_for_ = 12, 
		RULE_forStatement = 13, RULE_function = 14, RULE_funStatement = 15, RULE_programStatement = 16, 
		RULE_functionCall = 17, RULE_subroutine = 18, RULE_decParameter = 19, 
		RULE_subStatement = 20, RULE_subroutineCall = 21, RULE_arrayDeclaration = 22, 
		RULE_program = 23, RULE_oneDimArrayAsig = 24, RULE_twoDimArrayAsig = 25, 
		RULE_oneArrayListAsig = 26, RULE_arrayDeclaration2 = 27, RULE_continue_ = 28, 
		RULE_break_ = 29, RULE_dynamicArrayDec = 30, RULE_allocate = 31, RULE_deallocate = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "listaInstrucciones", "instruction", "declaration", "asignation", 
			"print", "expr", "if_", "statement", "else_", "doWhile", "whileStatement", 
			"for_", "forStatement", "function", "funStatement", "programStatement", 
			"functionCall", "subroutine", "decParameter", "subStatement", "subroutineCall", 
			"arrayDeclaration", "program", "oneDimArrayAsig", "twoDimArrayAsig", 
			"oneArrayListAsig", "arrayDeclaration2", "continue_", "break_", "dynamicArrayDec", 
			"allocate", "deallocate"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'integer'", "'character'", "'complex'", "'logical'", "'real'", 
			"':'", "'='", "','", "'print'", "'*'", "'-'", "'**'", "'/'", "'+'", "'=='", 
			"'.eq.'", "'/='", "'.ne.'", "'>='", "'.ge.'", "'<='", "'.le.'", "'>'", 
			"'.gt.'", "'<'", "'.lt.'", "'.and.'", "'.or.'", "'.not.'", "'('", "')'", 
			"'.true.'", "'.false.'", "'['", "']'", "'size'", "'if'", "'then'", "'endif'", 
			"'else'", "'do'", "'while'", "'end'", "'function'", "'result'", "'implicit'", 
			"'none'", "'subroutine'", "'intent'", "'in'", "'call'", "'dimension'", 
			"'program'", "'cycle'", "'exit'", "'allocatable'", "'allocate'", "'deallocate'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "INT", 
			"DOUBLE", "IDEN", "COMMENT", "STRING", "STRING2", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ListaInstruccionesContext listaInstrucciones() {
			return getRuleContext(ListaInstruccionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			listaInstrucciones();
			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaInstruccionesContext extends ParserRuleContext {
		public InstructionContext instruction;
		public List<InstructionContext> e = new ArrayList<InstructionContext>();
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public ListaInstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaInstrucciones; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitListaInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaInstruccionesContext listaInstrucciones() throws RecognitionException {
		ListaInstruccionesContext _localctx = new ListaInstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_listaInstrucciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__8) | (1L << T__36) | (1L << T__40) | (1L << T__43) | (1L << T__47) | (1L << T__50) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__56) | (1L << T__57) | (1L << IDEN))) != 0)) {
				{
				{
				setState(69);
				((ListaInstruccionesContext)_localctx).instruction = instruction();
				((ListaInstruccionesContext)_localctx).e.add(((ListaInstruccionesContext)_localctx).instruction);
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	 
		public InstructionContext() { }
		public void copyFrom(InstructionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SubContext extends InstructionContext {
		public SubroutineContext subroutine() {
			return getRuleContext(SubroutineContext.class,0);
		}
		public SubContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitSub(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArrD2Context extends InstructionContext {
		public ArrayDeclaration2Context arrayDeclaration2() {
			return getRuleContext(ArrayDeclaration2Context.class,0);
		}
		public ArrD2Context(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitArrD2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AlloContext extends InstructionContext {
		public AllocateContext allocate() {
			return getRuleContext(AllocateContext.class,0);
		}
		public AlloContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitAllo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TwoArrAsContext extends InstructionContext {
		public TwoDimArrayAsigContext twoDimArrayAsig() {
			return getRuleContext(TwoDimArrayAsigContext.class,0);
		}
		public TwoArrAsContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitTwoArrAs(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FoContext extends InstructionContext {
		public For_Context for_() {
			return getRuleContext(For_Context.class,0);
		}
		public FoContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitFo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArrDContext extends InstructionContext {
		public ArrayDeclarationContext arrayDeclaration() {
			return getRuleContext(ArrayDeclarationContext.class,0);
		}
		public ArrDContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitArrD(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PtrContext extends InstructionContext {
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public PtrContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitPtr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InsIfContext extends InstructionContext {
		public If_Context if_() {
			return getRuleContext(If_Context.class,0);
		}
		public InsIfContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitInsIf(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeallContext extends InstructionContext {
		public DeallocateContext deallocate() {
			return getRuleContext(DeallocateContext.class,0);
		}
		public DeallContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitDeall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AsContext extends InstructionContext {
		public AsignationContext asignation() {
			return getRuleContext(AsignationContext.class,0);
		}
		public AsContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitAs(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DwContext extends InstructionContext {
		public DoWhileContext doWhile() {
			return getRuleContext(DoWhileContext.class,0);
		}
		public DwContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitDw(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OneArrListAsContext extends InstructionContext {
		public OneArrayListAsigContext oneArrayListAsig() {
			return getRuleContext(OneArrayListAsigContext.class,0);
		}
		public OneArrListAsContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitOneArrListAs(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BreContext extends InstructionContext {
		public Break_Context break_() {
			return getRuleContext(Break_Context.class,0);
		}
		public BreContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitBre(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Dynamic1Context extends InstructionContext {
		public DynamicArrayDecContext dynamicArrayDec() {
			return getRuleContext(DynamicArrayDecContext.class,0);
		}
		public Dynamic1Context(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitDynamic1(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SubCContext extends InstructionContext {
		public SubroutineCallContext subroutineCall() {
			return getRuleContext(SubroutineCallContext.class,0);
		}
		public SubCContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitSubC(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarContext extends InstructionContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclarContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitDeclar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ComeOnContext extends InstructionContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ComeOnContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitComeOn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ContContext extends InstructionContext {
		public Continue_Context continue_() {
			return getRuleContext(Continue_Context.class,0);
		}
		public ContContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitCont(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FcContext extends InstructionContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public FcContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitFc(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunContext extends InstructionContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FunContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitFun(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OneArrAsContext extends InstructionContext {
		public OneDimArrayAsigContext oneDimArrayAsig() {
			return getRuleContext(OneDimArrayAsigContext.class,0);
		}
		public OneArrAsContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitOneArrAs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruction);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new DeclarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				declaration();
				}
				break;
			case 2:
				_localctx = new PtrContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				print();
				}
				break;
			case 3:
				_localctx = new InsIfContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(77);
				if_();
				}
				break;
			case 4:
				_localctx = new DwContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(78);
				doWhile();
				}
				break;
			case 5:
				_localctx = new FoContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(79);
				for_();
				}
				break;
			case 6:
				_localctx = new AsContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(80);
				asignation();
				}
				break;
			case 7:
				_localctx = new FunContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(81);
				function();
				}
				break;
			case 8:
				_localctx = new FcContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(82);
				functionCall();
				}
				break;
			case 9:
				_localctx = new SubContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(83);
				subroutine();
				}
				break;
			case 10:
				_localctx = new SubCContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(84);
				subroutineCall();
				}
				break;
			case 11:
				_localctx = new ArrDContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(85);
				arrayDeclaration();
				}
				break;
			case 12:
				_localctx = new ArrD2Context(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(86);
				arrayDeclaration2();
				}
				break;
			case 13:
				_localctx = new ComeOnContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(87);
				program();
				}
				break;
			case 14:
				_localctx = new OneArrAsContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(88);
				oneDimArrayAsig();
				}
				break;
			case 15:
				_localctx = new OneArrListAsContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(89);
				oneArrayListAsig();
				}
				break;
			case 16:
				_localctx = new TwoArrAsContext(_localctx);
				enterOuterAlt(_localctx, 16);
				{
				setState(90);
				twoDimArrayAsig();
				}
				break;
			case 17:
				_localctx = new ContContext(_localctx);
				enterOuterAlt(_localctx, 17);
				{
				setState(91);
				continue_();
				}
				break;
			case 18:
				_localctx = new BreContext(_localctx);
				enterOuterAlt(_localctx, 18);
				{
				setState(92);
				break_();
				}
				break;
			case 19:
				_localctx = new Dynamic1Context(_localctx);
				enterOuterAlt(_localctx, 19);
				{
				setState(93);
				dynamicArrayDec();
				}
				break;
			case 20:
				_localctx = new AlloContext(_localctx);
				enterOuterAlt(_localctx, 20);
				{
				setState(94);
				allocate();
				}
				break;
			case 21:
				_localctx = new DeallContext(_localctx);
				enterOuterAlt(_localctx, 21);
				{
				setState(95);
				deallocate();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SingularNullContext extends DeclarationContext {
		public Token t;
		public TerminalNode IDEN() { return getToken(GrammarParser.IDEN, 0); }
		public SingularNullContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitSingularNull(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PluralNullContext extends DeclarationContext {
		public Token t;
		public Token IDEN;
		public List<Token> p = new ArrayList<Token>();
		public List<Token> e = new ArrayList<Token>();
		public List<TerminalNode> IDEN() { return getTokens(GrammarParser.IDEN); }
		public TerminalNode IDEN(int i) {
			return getToken(GrammarParser.IDEN, i);
		}
		public PluralNullContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitPluralNull(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SingularActiveContext extends DeclarationContext {
		public Token t;
		public TerminalNode IDEN() { return getToken(GrammarParser.IDEN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SingularActiveContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitSingularActive(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PluralActiveContext extends DeclarationContext {
		public Token t;
		public Token IDEN;
		public List<Token> p = new ArrayList<Token>();
		public List<Token> e = new ArrayList<Token>();
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> IDEN() { return getTokens(GrammarParser.IDEN); }
		public TerminalNode IDEN(int i) {
			return getToken(GrammarParser.IDEN, i);
		}
		public PluralActiveContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitPluralActive(this);
			else return visitor.visitChildren(this);
		}
	}
